--- a/index.html
+++ b/index.html
@@ -348,6 +348,8 @@ const allCards = [
   { id: 8, name: 'Nubank', logo: 'https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/3ed27f45-12cf-401e-96a9-ecc81f7d4e00/public', brandLogo: 'https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/3ed27f45-12cf-401e-96a9-ecc81f7d4e00/public', showBrandName: true, brandNameText: 'Bank', xHandle: 'nubank', showFrontTags: true, bg: 'from-[#8A05BE] to-[#6a0491]', network: 'Mastercard', category: 'neobank', archetype: 'bank', custody: 'Custodial', chain: 'N/A', regions: ['latam', 'argentina'], cashback: '4% APY', cashbackToken: 'USDC', fxFee: 'Varies', annualFee: '$0', settlement: 'Fiat', features: ['USDC rewards', 'Stablecoin card testing', 'Crypto trading', '4% USDC yield'], perks: ['Largest LatAm bank', '100M+ users', 'Stablecoin card coming'], website: 'https://nubank.com.br', platforms: 'both' },
   // Veil - Privacy-first omni-bank with Visa partnership, Dubai HQ
   { id: 225, name: 'Veil', logo: 'https://logo.clearbit.com/veil.me', brandLogo: 'https://logo.clearbit.com/veil.me', xHandle: 'bankwithveil', showBrandName: true, brandNameText: 'Veil', showFrontTags: true, bg: 'from-[#0F172A] to-[#1E293B]', network: 'Visa', category: 'cryptoNative', archetype: 'neobank', custody: 'Custodial', chain: 'Multi-chain', regions: ['global', 'europe', 'apac'], cashback: 'TBD', cashbackToken: 'TBD', fxFee: 'TBD', annualFee: 'TBD', features: ['Privacy-first omni-bank', 'Virtual + physical Visa cards', 'Crypto-fiat multi-currency', 'AI financial agent', 'Merchant payment links', 'Token swaps'], perks: ['Visa partnership', 'Dubai regulated', 'Personal + business accounts', 'On-chain settlement'], website: 'https://veil.me', platforms: 'both' },
+  { id: 226, name: 'Amp Pay', logo: 'https://logo.clearbit.com/getamppay.com', brandLogo: 'https://logo.clearbit.com/getamppay.com', xHandle: 'GetAmpPay', showBrandName: true, brandNameText: 'Amp Pay', showFrontTags: true, bg: 'from-[#6C63FF] to-[#5A52D5]', network: 'Visa', category: 'cryptoNative', archetype: 'neobank', custody: 'Custodial', chain: 'Multi-chain', regions: ['global'], cashback: 'Up to 4%', cashbackToken: 'USD', fxFee: '0%', annualFee: '$0', features: ['Up to 4% cash back', 'Up to 12% APY savings', 'No credit check', 'Black Card tier', 'Free P2P payments', 'Crypto spending'], perks: ['High savings rates up to 12% APY', 'Free global P2P payments', 'No account minimums or monthly fees', 'Multiple card tiers'], website: 'https://www.getamppay.com', platforms: 'both' },
+  { id: 227, name: 'Sling Money', logo: 'https://logo.clearbit.com/sling.money', brandLogo: 'https://logo.clearbit.com/sling.money', xHandle: 'SlingMoney', showBrandName: true, brandNameText: 'Sling Money', showFrontTags: true, bg: 'from-[#00D4AA] to-[#00B894]', network: 'Visa', category: 'onchain', archetype: 'neobank', custody: 'Non-Custodial', chain: 'Solana', regions: ['global'], cashback: 'TBD', cashbackToken: 'TBD', fxFee: '0%', annualFee: 'TBD', features: ['Instant global transfers', 'Solana stablecoin wallet', 'USDP + USDC + EURC support', 'Debit card funding', 'Mobile money integration', 'Cross-border remittance'], perks: ['Ribbit Capital & USV backed', 'Ex-Monzo/Revolut/Wise/Cash App team', 'Free instant global transfers', 'Multi-country support'], website: 'https://sling.money', platforms: 'both' },
 
   // ============================================
   // COMING SOON - Cards on waitlist or launching soon
@@ -4084,6 +4086,38 @@ As a newly launched platform, Veil has no verified app store ratings yet. The Vi
       { q: "What makes Veil different from other crypto cards?", a: "Veil combines privacy-first banking with a full omni-bank experience — Visa cards, multi-currency accounts, AI financial agent, merchant tools, and on-chain settlement in one platform." }
     ]
   },
+  'Amp Pay': {
+    seoTitle: "Amp Pay Card Review 2026: Up to 4% Cash Back + 12% APY Savings | Spendbase",
+    metaDescription: "Amp Pay offers a Visa Black Card with up to 4% cash back and savings rates up to 12% APY. No credit check, no monthly fees. See full review →",
+    overview: `Amp Pay is a crypto-native neobank offering a Visa debit card (the "Black Card") with up to 4% cash back on purchases and savings accounts yielding up to 12% APY through DeFi yield strategies.
+
+The platform requires no credit check for approval and charges no monthly fees, no account minimums, and no withdrawal limits. It combines traditional banking convenience with crypto-powered yield generation — your savings earn DeFi rates while you spend with a standard Visa card anywhere in the world.
+
+Amp Pay is available on both iOS and Android. The 4% cash back rate requires referring at least one new user who gets a Black Card during promotion periods. The 12% APY is the maximum 30-day average reported by DeFi Carrot and varies with market conditions. Best for users who want high-yield savings and cashback without the complexity of managing DeFi positions directly.`,
+    pros: ["Up to 4% cash back on purchases", "Savings rates up to 12% APY", "No credit check required", "No monthly fees or account minimums", "Visa accepted worldwide"],
+    cons: ["4% rate requires referral during promotions", "APY varies with DeFi market conditions", "Relatively new platform", "Cashback terms may change"],
+    faq: [
+      { q: "How does Amp Pay offer 12% APY?", a: "Amp Pay routes savings through DeFi yield strategies. The 12% is the maximum 30-day average APY reported by DeFi Carrot. Rates fluctuate with market conditions and are not guaranteed." },
+      { q: "Is there a credit check for Amp Pay?", a: "No. Amp Pay approves users instantly with no credit check required. It's a debit card, not a credit card." },
+      { q: "How do I get 4% cash back?", a: "The 4% rate is available during promotion periods when you refer at least one new user who gets an Amp Black Card. Base rates may be lower — check the app for current terms." }
+    ]
+  },
+  'Sling Money': {
+    seoTitle: "Sling Money Review 2026: Instant Global Transfers on Solana | Spendbase",
+    metaDescription: "Sling Money enables free, instant cross-border transfers using Solana stablecoins. Backed by Ribbit Capital & USV. See features and review →",
+    overview: `Sling Money is a global payments app built on the Solana blockchain that enables instant, free cross-border transfers using stablecoins (USDP, USDC, and EURC). Founded by a team with experience at Monzo, Revolut, Wise, Spotify, Facebook, Square, and Cash App.
+
+The app lets you send money globally by searching for a recipient's name — no bank account numbers, IBANs, or addresses needed. Users can connect debit cards, bank accounts, or mobile money wallets and transfer between countries and currencies in two taps. Funds are converted to Pax Dollar (USDP), a fully reserve-backed stablecoin regulated by the New York Department of Financial Services.
+
+Backed by Ribbit Capital and Union Square Ventures — two of the most respected fintech venture capital firms. Sling Money is available in the US, UK, EU, and expanding globally. Best suited for users who need affordable cross-border remittance with the speed and transparency of blockchain settlement.`,
+    pros: ["Free instant global transfers", "Backed by Ribbit Capital & USV", "World-class team from Monzo, Revolut, Wise", "NYDFS-regulated stablecoin (USDP)", "Simple UX — send by name"],
+    cons: ["No spending card yet (transfer-focused)", "Stablecoin conversion may confuse traditional users", "Limited to supported corridors", "Relatively new platform"],
+    faq: [
+      { q: "How does Sling Money work?", a: "When you add funds via debit card or bank account, they're converted to USDP (Pax Dollar) on Solana. You can then send money to anyone on Sling Money globally, instantly and for free. Recipients withdraw to their local bank or mobile money wallet." },
+      { q: "Is Sling Money safe?", a: "Sling Money uses USDP, a fully reserve-backed stablecoin issued by Paxos Trust Company and regulated by the New York Department of Financial Services. The company is backed by Ribbit Capital and Union Square Ventures." },
+      { q: "Where is Sling Money available?", a: "Sling Money is available in the US, UK, and multiple European and global markets. Check the app for the latest supported countries and corridors." }
+    ]
+  },
   'Fold': {
     seoTitle: "Fold Card Review 2026: Bitcoin Rewards Debit Card | Spendbase",
     metaDescription: "Fold Card offers Bitcoin cashback with gamified rewards. Spin the wheel for sats. See features and how it compares →",
@@ -5258,6 +5292,8 @@ const cardRatingsData = {
   'Wirex': { ios: 3.7, android: 3.5, trustpilot: 1.3, cryptonoshi: 53, composite: 2.6, reviews: 10000 }, // Trustpilot 1.3 (Bad)
   'Nubank': { ios: 4.7, android: 4.6, trustpilot: 2.9, cryptonoshi: null, composite: 4.1, reviews: 350000 }, // Trustpilot 2.9 (Average)
   'Veil': { ios: null, android: null, trustpilot: null, cryptonoshi: null, composite: 4.1, reviews: 0 },
+  'Amp Pay': { ios: null, android: null, trustpilot: null, cryptonoshi: null, composite: 4.0, reviews: 0 },
+  'Sling Money': { ios: null, android: null, trustpilot: null, cryptonoshi: null, composite: 4.0, reviews: 0 },
   'N26': { ios: 4.5, android: 4.4, trustpilot: 4.0, cryptonoshi: null, composite: 4.3, reviews: 200000 }, // Trustpilot 4.0 (Great)
 
   // === MID TIER (3.5-4.0) - Average performers ===
