--- a/index.html
+++ b/index.html
@@ -695,7 +695,7 @@ function Card({ card, ratings, onRate, darkMode = true, userRatedCards = {}, isI
                   )
                 ) : (
                   <>
-                    <img loading="lazy" src={card.logo} alt="" className="w-6 h-6 rounded-full bg-white/10 object-cover" onError={(e) => e.target.style.display='none'} />
+                    <img loading="lazy" src={card.logo} alt="" className="w-6 h-6 rounded-full object-contain" onError={(e) => e.target.style.display='none'} />
                     <span className="font-bold text-sm">{card.name}</span>
                   </>
                 )}
@@ -2790,7 +2790,7 @@ function CompareDrawer({ compareList, onRemove, onCompare, onClear, darkMode }) 
         <div className="flex gap-3 overflow-x-auto pb-2">
           {compareList.map(card => (
             <div key={card.id} className={`flex-shrink-0 flex items-center gap-2 px-3 py-2 rounded-lg ${darkMode ? 'bg-gray-800' : 'bg-gray-100'}`}>
-              <img loading="lazy" src={card.logo} alt="" className="w-6 h-6 rounded-full bg-white/10 object-cover" onError={(e) => e.target.style.display='none'} />
+              <img loading="lazy" src={card.logo} alt="" className="w-6 h-6 rounded-full object-contain" onError={(e) => e.target.style.display='none'} />
               <span className={`text-sm ${darkMode ? 'text-white' : 'text-gray-900'}`}>{card.name}</span>
               <button onClick={() => onRemove(card.id)} className="text-gray-500 hover:text-red-400 ml-1">
                 <svg className="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M6 18L18 6M6 6l12 12" /></svg>
@@ -2836,7 +2836,7 @@ function CompareModal({ open, onClose, compareList, darkMode }) {
                 {compareList.map(card => (
                   <th key={card.id} className="p-3 text-center min-w-[150px]">
                     <div className="flex flex-col items-center gap-2">
-                      <img loading="lazy" src={card.logo} alt="" className="w-12 h-12 rounded-full bg-white/10 object-cover" onError={(e) => e.target.style.display='none'} />
+                      <img loading="lazy" src={card.logo} alt="" className="w-12 h-12 rounded-full object-contain" onError={(e) => e.target.style.display='none'} />
                       <span className={`font-bold text-sm ${darkMode ? 'text-white' : 'text-gray-900'}`}>{card.name}</span>
                     </div>
                   </th>
@@ -3260,7 +3260,7 @@ function CardDetailPage({ card, darkMode, ratings, userRatedCards, onRate, onBac
           <div className={`p-4 sm:p-6 bg-gradient-to-r ${card.bg || 'from-gray-700 to-gray-800'}`}>
             <div className="flex flex-col sm:flex-row sm:items-start sm:justify-between gap-4">
               <div className="flex items-center gap-3 sm:gap-4">
-                <img loading="lazy" src={card.logo} alt={card.name} className="w-12 h-12 sm:w-16 sm:h-16 rounded-xl bg-white/10 object-cover" onError={(e) => e.target.style.display='none'} />
+                <img loading="lazy" src={card.logo} alt={card.name} className="w-12 h-12 sm:w-16 sm:h-16 rounded-xl object-contain" onError={(e) => e.target.style.display='none'} />
                 <div>
                   <h1 className="text-xl sm:text-2xl font-bold text-white">{card.name}</h1>
                   <div className="flex flex-wrap items-center gap-1 sm:gap-2 mt-1">
