Remove emoji from Calculator nav

--- a/index.html
+++ b/index.html
@@ -1918,7 +1918,7 @@ function Header({ activeView, navigateTo, onSubscribe, darkMode, setDarkMode, se
                     : (darkMode ? 'text-gray-400 hover:text-white' : 'text-gray-500 hover:text-gray-900')
                 }`}
             >
-              {v === 'rewards' ? 'Video Rewards' : v === 'wizard' ? 'Find My Card' : v === 'calculator' ? '💰 Calculator' : v === 'ratings' ? 'Scores' : v === 'intel' ? 'Intel' : v.charAt(0).toUpperCase()+v.slice(1)}
+              {v === 'rewards' ? 'Video Rewards' : v === 'wizard' ? 'Find My Card' : v === 'calculator' ? 'Calculator' : v === 'ratings' ? 'Scores' : v === 'intel' ? 'Intel' : v.charAt(0).toUpperCase()+v.slice(1)}
             </button>
           ))}
           </nav>
@@ -1969,7 +1969,7 @@ function Header({ activeView, navigateTo, onSubscribe, darkMode, setDarkMode, se
                       : (darkMode ? 'text-gray-400 hover:text-white hover:bg-gray-800/50' : 'text-gray-500 hover:text-gray-900 hover:bg-gray-50')
                   }`}
                 >
-                  {v === 'rewards' ? 'Video Rewards' : v === 'wizard' ? 'Find My Card' : v === 'calculator' ? '💰 Calculator' : v === 'cards' ? 'All Cards' : v === 'ratings' ? 'Scores' : v === 'intel' ? 'Intel' : v === 'learn' ? 'Learn' : v.charAt(0).toUpperCase()+v.slice(1)}
+                  {v === 'rewards' ? 'Video Rewards' : v === 'wizard' ? 'Find My Card' : v === 'calculator' ? 'Calculator' : v === 'cards' ? 'All Cards' : v === 'ratings' ? 'Scores' : v === 'intel' ? 'Intel' : v === 'learn' ? 'Learn' : v.charAt(0).toUpperCase()+v.slice(1)}
                 </button>
               ))}
               {/* Mobile Subscribe button */}
