Add calculator disclaimer - rates are advertised maximums

--- a/index.html
+++ b/index.html
@@ -5783,6 +5783,9 @@ function RewardCalculatorPage({ darkMode }) {
         <p className={`text-sm mt-2 ${darkMode ? 'text-gray-500' : 'text-gray-500'}`}>
           📊 Based on <strong>12 months</strong> of spending and <strong>holding all rewards</strong> (no selling)
         </p>
+        <p className={`text-xs mt-3 px-4 py-2 rounded-lg ${darkMode ? 'bg-yellow-500/10 text-yellow-500/80 border border-yellow-500/20' : 'bg-yellow-50 text-yellow-700 border border-yellow-200'}`}>
+          ⚠️ <strong>Disclaimer:</strong> Rates shown are advertised maximums. Actual rates may be lower and often require staking, VIP status, or have monthly caps. Some rates are limited-time promos. Always verify current terms on the card's website.
+        </p>
       </div>
 
       {/* Spend Input - Simplified */}
